--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,20 +1,20 @@
-name: Create Tag on Merge to Master
+name: Create Tag on Merge to test
 
 on:
   push:
     branches:
-      - release/* # replace with your release branch name
+      - release/*
   pull_request:
     types: [closed]
     branches:
-      - release/* # replace with your release branch name
+      - release/*
     paths:
       - '**'
 
 jobs:
   create-tag:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged && github.event.pull_request.base.ref == 'master'
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged && github.event.pull_request.base.ref == 'test'
     
     steps:
     - name: Checkout code
