--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,34 +1,36 @@
-name: Create Tag on Merge to test
+# This is a basic workflow to help you get started with Actions
 
+name: CI
+
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches:
-      - release/*
+    branches: [ "test" ]
   pull_request:
-    types: [closed]
-    branches:
-      - release/*
-    paths:
-      - '**'
+    branches: [ "test" ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  create-tag:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged && github.event.pull_request.base.ref == 'test'
-    
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
 
-    - name: Get current branch name
-      id: branch
-      run: echo ::set-output name=branch_name::$(echo ${GITHUB_REF#refs/heads/})
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
 
-    - name: Create tag
-      if: startsWith(steps.branch.outputs.branch_name, 'release/')
-      run: |
-        git config user.name "${{ github.actor }}"
-        git config user.email "${{ github.actor }}@users.noreply.github.com"
-        git tag -a "$(echo ${{ steps.branch.outputs.branch_name }} | sed -e 's/release/v/')-$(date +'%Y%m%d%H%M%S')" -m "Tagging $(echo ${{ steps.branch.outputs.branch_name }} | sed -e 's/release/v/')"
-        git push --follow-tags
-
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
