--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,13 +17,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
-    - name: Get current branch name
-      id: branch
-      run: echo ::set-output name=branch_name::$(echo ${GITHUB_REF#refs/heads/})
-
-    - name: Create tag
-      if: startsWith(steps.branch.outputs.branch_name, 'release/')
+      
+    - name: git tag
       run: |
         # # git config user.name "${{ github.actor }}"
         # # git config user.email "${{ github.actor }}@users.noreply.github.com"
