--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,6 +18,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
       
+    - name: Create VERSION file
+      run: echo "v1.0.0" > VERSION
+      
     - name: Read version from file
       run: |
         export VERSION=$(cat VERSION)
