--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,7 +41,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ .env.version }}
+        tag_name: ${{ env.version }}
         release_name: Release ${{ env.version }}
         body: |
           This is a new release.
