--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+
+    - name: Create VERSION file
+      run: echo "v1.0.0" > VERSION
       
     - name: Read version from file
       run: |
