--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -38,7 +38,14 @@ jobs:
         echo "v$MAJOR.$MINOR.$NEW_PATCH" > VERSION
 
         echo "new_version=v$MAJOR.$MINOR.$NEW_PATCH" >> $GITHUB_ENV
-
+    - name: Commit changes
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add VERSION
+        git commit -m "Bump version to v$MAJOR.$MINOR.$NEW_PATCH.$BUG"
+        git push
+        
     - name: Create tag
       uses: actions/create-release@v1
       env:
