--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,17 +35,17 @@ jobs:
 
         NEW_PATCH=$((PATCH+1))
 
-        echo "v$MAJOR.$MINOR.$NEW_PATCH" > VERSION
+        echo "v$MAJOR.$MINOR.$NEW_PATCH" > .github/workflows/VERSION
 
         echo "new_version=v$MAJOR.$MINOR.$NEW_PATCH" >> $GITHUB_ENV
     - name: Commit changes
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add VERSION
+        git add .github/workflows/VERSION
         git commit -m "Bump version to v$MAJOR.$MINOR.$NEW_PATCH.$BUG"
         git push
-        
+
     - name: Create tag
       uses: actions/create-release@v1
       env:
