--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,12 +4,12 @@ on:
   pull_request:
     types: [closed]
     branches:
-      - devops/AmMMHWtl/1395
+      - test
 
 jobs:
   create-tag:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged && github.event.pull_request.base.ref == 'devops/AmMMHWtl/1395'
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged && github.event.pull_request.base.ref == 'test'
     
     steps:
     - name: Checkout code
