--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,15 +16,16 @@ jobs:
       uses: actions/checkout@v2
     
     - name: Read version from file
+      id: Read-version
       run: |
         export VERSION=$(cat ./VERSION)
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
 
     - name: Create tag
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ env.VERSION }}
+        tag_name: ${{ steps.Read-version.outputs.VERSION }}
         body: |
           This is a new release.
