--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,11 +23,11 @@ jobs:
 
       - name: Create tag if not exists
         run: |
-          if ! git rev-parse v${{ steps.Read-version.outputs.VERSION }} >/dev/null 2>&1; then
-          git tag v${{ steps.Read-version.outputs.VERSION }}
-          git push origin v${{ steps.Read-version.outputs.VERSION }}
+          if ! git rev-parse ${{ steps.Read-version.outputs.VERSION }} >/dev/null 2>&1; then
+          git tag ${{ steps.Read-version.outputs.VERSION }}
+          git push origin ${{ steps.Read-version.outputs.VERSION }}
           else
-          echo "Tag v${{ steps.Read-version.outputs.VERSION }} already exists"
+          echo "Tag ${{ steps.Read-version.outputs.VERSION }} already exists"
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
