--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,11 +23,11 @@ jobs:
 
       - name: Create tag if not exists
         run: |
-          if ! git rev-parse ${{ steps.Read-version.outputs.VERSION }} >/dev/null 2>&1; then
+          if git rev-parse ${{ steps.Read-version.outputs.VERSION }} >/dev/null 2>&1; then
+          echo "Tag ${{ steps.Read-version.outputs.VERSION }} already exists"
+          else
           git tag ${{ steps.Read-version.outputs.VERSION }}
           git push origin ${{ steps.Read-version.outputs.VERSION }}
-          else
-          echo "Tag ${{ steps.Read-version.outputs.VERSION }} already exists"
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
