--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,12 +22,12 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Create tag if not exists
-        run: |
+        run: |          
           if git rev-parse ${{ steps.Read-version.outputs.VERSION }} >/dev/null 2>&1; then
-          echo "Tag ${{ steps.Read-version.outputs.VERSION }} already exists"
+            echo "Tag ${{ steps.Read-version.outputs.VERSION }} already exists"
           else
-          git tag ${{ steps.Read-version.outputs.VERSION }}
-          git push origin ${{ steps.Read-version.outputs.VERSION }}
+            git tag -a ${{ steps.Read-version.outputs.VERSION }} -m "Updated tag"
+            git push origin ${{ steps.Read-version.outputs.VERSION }}
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
