--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
       - name: Create tag
         run: |
-          git tag $(cat VERSION)
-          git push origin $(cat VERSION)
+          git tag $(cat ./VERSION)
+          git push origin $(cat ./VERSION)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
