--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,6 +12,9 @@ jobs:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged && github.event.pull_request.base.ref == 'test'
     
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
       - name: Create tag
         run: |
           git tag $(cat ./VERSION)
