--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,8 +17,8 @@ jobs:
         
       - name: Create tag
         run: |
-          git tag $(cat ./VERSION)
-          git push origin $(cat ./VERSION)
+          git tag $(cat VERSION)
+          git push origin $(cat VERSION)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
