--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,10 +1,10 @@
-name: Create Tag on Merge to test
+name: Create Tag on Merge to master
 
 on:
   pull_request:
     types: [closed]
     branches:
-      - test
+      - master
 
 jobs:
   create-tag:
